--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/reports/individual-report/individual-report.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/reports/individual-report/individual-report.html
@@ -100,13 +100,13 @@
                             </div>
                         </div>
                         <div>
-                            <div class="col-lg-2 col-md-2 col-sm-2 text-right" *ngIf="question.questionStatus==1">
+                            <div class="col-lg-2 col-md-2 col-sm-2 text-right" *ngIf="question.answerStatus==1">
                                 <div class="score negative">Score: -{{incorrectmarks}}</div>
                             </div>
-                            <div class="col-lg-2 col-md-2 col-sm-2 text-right" *ngIf="question.questionStatus==0">
+                            <div class="col-lg-2 col-md-2 col-sm-2 text-right" *ngIf="question.answerStatus==0">
                                 <div class="score positive">Score: +{{correctMarks}}</div>
                             </div>
-                            <div class="col-lg-2 col-md-2 col-sm-2 text-right" *ngIf="question.questionStatus==2">
+                            <div class="col-lg-2 col-md-2 col-sm-2 text-right" *ngIf="question.answerStatus==2">
                                 <div class="score">Score: 0</div>
                             </div>
                         </div>
