--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/test/test.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/test/test.html
@@ -58,7 +58,8 @@
                                     style="min-height: 400px; width:100%; overflow: auto;">
                         </ace-editor>
                         <br />
-                        <button type="button" class="btn" value="run">Run</button>
+                        <button type="button" class="btn" value="run" (click)="runCode()">Run</button>
+                        <p>{{codeResult}}</p>
                     </div>
                     <div class="display-table-cell ans-area ptb20 pl15" *ngIf="isQuestionSingleChoice && !isQuestionCodeSnippetType">
                         <md-radio-group>
