no two options can be same in mutiple option type question,browser tolerance not aplicable value changed

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/instructions/instructions.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/instructions/instructions.html
@@ -21,7 +21,7 @@
         <h5>Please Note:</h5>
         <ul>
             <li>This test comprises of <strong *ngFor=" let category of testInstructions.categoryNameList;let i=index">{{category}}{{i==testInstructions.categoryNameList.length-1 ? ' ': i == testInstructions.categoryNameList.length -2 ? ' and ' : ' , '}}</strong> questions.</li>
-            <li>Do not switch to any other tab/browser/app during your test. If you do so, your test will end after <strong>{{testInstructions.browserTolerance}}</strong> warnings.</li>
+            <li *ngIf="!isBrowserToleranceNotApplicable">Do not switch to any other tab/browser/app during your test. If you do so, your test will end after <strong>{{testInstructions.browserTolerance}}</strong> warnings.</li>
         </ul>
         <div class="text-center">
             <h2 class="mb20">All the Best!</h2>
