--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-questions/test-questions.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-questions/test-questions.html
@@ -2,7 +2,7 @@
     <div class="loader-container" *ngIf="loader">
         <div class="spinner"></div>
     </div>
-    <create-test-header  [disablePreview]="disablePreview" [testDetails]="testDetails" [testNameReference]="testNameReference"></create-test-header>
+    <create-test-header [disablePreview]="disablePreview" [testDetails]="testDetails" [testNameReference]="testNameReference"></create-test-header>
     <div class="container" *ngIf="!loader">
         <div class="loader-container" *ngIf="loader_question">
             <div class="spinner"></div>
@@ -15,7 +15,7 @@
         <h5 *ngIf="isAnyCategorySelectedForTest">Select questions for each section</h5>
         <ng-container *ngFor="let category of testDetails.categoryAcList; let k=index">
             <md2-accordion class="questions-selection" *ngIf="category.isSelect">
-                <md2-accordion-tab class="collapsible-block">
+                <md2-accordion-tab class="collapsible-block" [attr.close]="category.isAccordionOpen">
                     <md2-accordion-header class="collapsible-header clearfix" [class.active]="category.isAccordionOpen" (click)="getAllquestions(category,k)">
                         <div class="title-info h2 pull-left">
                             <span>{{category.categoryName}}</span>
