--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-questions/test-questions.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-questions/test-questions.html
@@ -15,7 +15,7 @@
         <h5 *ngIf="isAnyCategorySelectedForTest">Select questions for each section</h5>
         <ng-container *ngFor="let category of testDetails.categoryAcList; let k=index">
             <md2-accordion class="questions-selection" *ngIf="category.isSelect">
-                <md2-accordion-tab class="collapsible-block" [attr.close]="category.isAccordionOpen">
+                <md2-accordion-tab class="collapsible-block">
                     <md2-accordion-header class="collapsible-header clearfix" [class.active]="category.isAccordionOpen" (click)="getAllquestions(category,k)">
                         <div class="title-info h2 pull-left">
                             <span>{{category.categoryName}}</span>
