test preview fixed

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-preview/test-preview.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-preview/test-preview.html
@@ -1,4 +1,2 @@
-﻿<test [testLink]="testLink"
-      [getQuestion]="testPreview.test.id"
-      [resume]="'allCandidate'">
+﻿<test [testLink]="testLink">
 </test>
