Fixed issues with coding question on test conduct page

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/test/test.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/test/test.html
@@ -61,7 +61,7 @@
                         <button type="button" class="btn" value="run" (click)="runCode()">Run</button>
                         <br/>
                         <div style="padding:10px" class="bg-primary">
-                          <p [innerHTML]="codeResult" ></p>
+                          <pre>{{codeResult}}</pre>
                         </div>
                     </div>
                     <div class="display-table-cell ans-area ptb20 pl15" *ngIf="isQuestionSingleChoice && !isQuestionCodeSnippetType">
