error message changed in porfile,resetpassword,setup,stringconstants

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-dashboard/change-password-dialog.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-dashboard/change-password-dialog.html
@@ -19,10 +19,10 @@
             </div>
             <div class="form-group">
                 <label>New Password</label>
-                <input type="password" class="form-control" [(ngModel)]="user.newPassword" name="newpassword" #newpassword="ngModel" pattern="^(?=.*[A-Za-z])(?=.*\d)(?=.*[@$!_%*#?&])[A-Za-z\d@$!_%*#?&]{8,14}$" required />
+                <input required pattern="^(?=.*[A-Za-z])(?=.*\d)(?=.*[@$!_%*#?&])[A-Za-z\d@$!_%*#?&]{8,14}$" type="password" class="form-control" [(ngModel)]="user.newPassword" name="newpassword" #newpassword="ngModel" />
                 <div class="errors-container">
                     <span *ngIf='newpassword.errors && newpassword.errors.required && newpassword.touched && !newpassword.valid' class='error-msg'>Please enter new password</span>
-                    <span *ngIf="newpassword.errors && newpassword.touched && newpassword.errors.pattern && !newpassword.valid" class="error-msg">Password must be alphanumeric including at least 1 uppercase letter and a special character with 8 to 14 characters</span>
+                    <span *ngIf='newpassword.errors && newpassword.touched && newpassword.errors.pattern && !newpassword.valid' class='error-msg'>Password must be alphanumeric including at least 1 uppercase letter,1 lowercase letter and a special character with 8 to 14 characters</span>
                 </div>
             </div>
             <div class="form-group">
