--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/test-summary/test-summary.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/test-summary/test-summary.html
@@ -5,8 +5,8 @@
     </div>
     <div class="content-block">
         <h2 class="mb30">Test Summary</h2>
-        <p class="test-info" *ngIf="!isTimeLeftZero"><span class="h4">Time Left: </span><span class="h2" *ngIf="timeLeftInHoursVisible">{{timeLeftInHours}} hr(s)</span><span class="h2" *ngIf="timeLeftInMinutesVisible">{{timeLeftInMinutes}} min(s)</span><span class="h2" *ngIf="timeLeftInSecondsVisible">{{timeLeftInSeconds}} sec(s)</span></p>
-        <p class="test-info" *ngIf="isTimeLeftZero"><span class="h4">Time Left: </span><span class="h2" *ngIf="timeLeftInHoursVisible">{{timeLeftInHours}} hr(s)</span><span class="h2" *ngIf="timeLeftInMinutesVisible">{{timeLeftInMinutes}} min(s)</span><span class="h2" *ngIf="timeLeftInSecondsVisible">{{timeLeftInSeconds}} sec(s)</span></p>
+        <p class="test-info"><span class="h4">Time Left: </span><span class="h2">{{timeString}}</span></p>
+        <!--<p class="test-info" *ngIf="isTimeLeftZero"><span class="h4">Time Left: </span><span class="h2" *ngIf="timeLeftInHoursVisible">{{timeLeftInHours}} hr(s)</span><span class="h2" *ngIf="timeLeftInMinutesVisible">{{timeLeftInMinutes}} min(s)</span><span class="h2" *ngIf="timeLeftInSecondsVisible">{{timeLeftInSeconds}} sec(s)</span></p>-->
         <p class="test-info"><span class="h4">Total Questions: </span><span class="h2">{{totalQuestionsInTest}}</span></p>
         <p class="test-info"><span class="h4">Attempt Summary: </span></p>
         <table>
