--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-sections/test-sections.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-sections/test-sections.html
@@ -1,14 +1,14 @@
 ﻿<div class="test-create-steps test-sections">
-    <create-test-header  [disablePreview]="disablePreview" [testDetails]="testDetails" [testNameReference]="testNameReference"></create-test-header>
+    <create-test-header [disablePreview]="disablePreview" [testDetails]="testDetails" [testNameReference]="testNameReference"></create-test-header>
     <div class="loader-container" *ngIf="loader">
         <div class="spinner"></div>
     </div>
     <div class="container" *ngIf="!loader">
-        <h5 *ngIf="!isCategoryExist">No Sections have been created yet. To do so, please click <a class="theme-text"  [routerLink]="['/questions']">here</a>.</h5>
+        <h5 *ngIf="!isCategoryExist">No Sections have been created yet. To do so, please click <a class="theme-text" [routerLink]="['/questions']">here</a>.</h5>
         <h5 *ngIf="isCategoryExist && isEditTestEnabled">Select sections to add in your test</h5>
         <h5 *ngIf="!isEditTestEnabled">Selected sections have been added in your test. You cannot edit an ongoing test.</h5>
         <ul class="sections-list">
-            <li *ngFor="let categories of testDetails.categoryAcList"
+            <li *ngFor="let categories of testCategories"
                 (click)="onSelect(categories)">
                 <label for="{{categories.categoryName}}">
                     <input type="checkbox" id="" [(ngModel)]="categories.isSelect" />
