--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/test-summary/test-summary.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/test-summary/test-summary.html
@@ -25,11 +25,11 @@
             <button type="button" class="btn" (click)="startTest()">Back to Test</button>
             <button type="button" class="btn btn-primary" (click)="endTestButtonClicked()">End Test</button>
         </div>
-        <div>
-            <h3 *ngIf="isTestClosedUnConditionally && !isTestResume" (click)="sendRequestForResume()"><a>Click here to send request for resume test</a></h3>
-            <h3 *ngIf="isTestResume" (click)="startTest()">Click here to start test</h3>
+        <div class="text-center">
+            <button class="btn" *ngIf="isTestClosedUnConditionally && !isTestResume" (click)="sendRequestForResume()">Send request to resume test</button>
+            <button type="button" class="btn btn-primary" *ngIf="!isTestResume && isTestClosedUnConditionally " (click)="endYourTest()">End Test</button>
+            <button type="button" class="btn" *ngIf="isTestResume" (click)="startTest()">Start Test</button>
         </div>
-
     </div>
     <test-conduct-footer></test-conduct-footer>
 </div>
