corrected validation pattern for setup,reset password and changed password

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-dashboard/change-password-dialog.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-dashboard/change-password-dialog.html
@@ -19,17 +19,17 @@
             </div>
             <div class="form-group">
                 <label>New Password</label>
-                <input required pattern="^(?=.*[A-Za-z])(?=.*\d)(?=.*[@$!_%*#?&])[A-Za-z\d@$!_%*#?&]{8,14}$" type="password" class="form-control" [(ngModel)]="user.newPassword" name="newpassword" #newpassword="ngModel" />
+                <input required pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*[\W]).{8,14}$" type="password" class="form-control" [(ngModel)]="user.newPassword" name="newpassword" #newpassword="ngModel" />
                 <div class="errors-container">
-                    <span *ngIf='newpassword.errors && newpassword.errors.required && newpassword.touched && !newpassword.valid' class='error-msg'>Please enter new password</span>
-                    <span *ngIf='newpassword.errors && newpassword.touched && newpassword.errors.pattern && !newpassword.valid' class='error-msg'>Password must be alphanumeric including at least 1 uppercase letter,1 lowercase letter and a special character with 8 to 14 characters</span>
+                    <span *ngIf='newpassword.errors && newpassword.errors.required && newpassword.dirty && !newpassword.valid' class='error-msg'>Please enter new password</span>
+                    <span *ngIf='newpassword.errors && newpassword.errors.pattern && !newpassword.valid' class='error-msg'>Password must be alphanumeric including at least 1 uppercase letter,1 lowercase letter and a special character with 8 to 14 characters</span>
                 </div>
             </div>
             <div class="form-group">
                 <label>Confirm Password</label>
                 <input type="password" class="form-control" [(ngModel)]="user.confirmPassword" name="confirmpassword" #confirmpassword="ngModel" required (ngModelChange)="changeCurrentPassword()" />
                 <div class="errors-container">
-                    <span *ngIf='confirmpassword.errors && (confirmpassword.dirty || confirmpassword.touched) && !newpassword.valid' class='error-msg' [hidden]='!confirmpassword.errors.required'>Please retype the new password</span>
+                    <span *ngIf='confirmpassword.errors && confirmpassword.dirty && !newpassword.valid' class='error-msg' [hidden]='!confirmpassword.errors.required'>Please retype the new password</span>
                     <span class='error-msg' *ngIf="!isPasswordSame">New password and confirm password do not match</span>
                 </div>
             </div>
